change admin login

--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,5 +1,5 @@
 <md-content id="login-content" layout="column" flex layout-align="center center">
-  <h1 class="text-center">Hey - an admin plugin for Hexo</h1>
+  <h1 class="text-center">SOMC GRAPHICS Admin</h1>
   <md-card>
     <md-card-content>
       <form class="card" name="loginForm" layout="column" ng-submit="vm.login(loginForm)">
